samples/errors/004-malformed-declaration.ooc

main: func -> Type // this is actually alright

Toop {

    
    
}